# ivobos-bazel-monorepo

./: .envrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  flake.nix  package.json  pnpm-lock.yaml
.direnv/: flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
.github/workflows/: main.yml
closure/: README.md
closure/01-single-file/: BUILD.bazel  hello.js  run.sh
closure/02-import-file/: BUILD.bazel  greeting.js  utils.js
otel/code-based/: BUILD.bazel  README.md  app.js  instrumentation.js
otel/zero-code/: BUILD.bazel  README.md  collector.js  send-ping.js  web-app.js
projects/: README.md
projects/calculator/: calculator.py  calculator_test.py
projects/closure_lib/: BUILD.bazel  hello.js
projects/genrule_a/: BUILD.bazel
projects/go_hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
projects/go_web/: BUILD.bazel  main.go
projects/java_greeter/src/main/java/com/ivobos/javagreeter/greeter/: BUILD.bazel  Greeter.java
projects/java_greeter/src/main/java/com/ivobos/javagreeter/main/: BUILD.bazel  Main.java
projects/my-python-app/: BUILD.bazel  main.py
projects/node_calculator/: calculator.js
projects/node_web/: BUILD.bazel  index.js
projects/projectB/: BUILD.bazel
projects/python_calculator/: calculator_test.py
projects/python_web/: BUILD.bazel  python_web.py
