load("@aspect_rules_js//js:defs.bzl", "js_binary")


js_binary(
    name = "app",
    data = ["//:npm/express","//:npm/@opentelemetry/api","//:npm/@opentelemetry/auto-instrumentations-node",
        "//:npm/@opentelemetry/sdk-node", "//:npm/@opentelemetry/sdk-trace-node", "//:npm/@opentelemetry/sdk-metrics"],
    entry_point = "app.js",
    env = {
        'PORT': '8080',
    }
)

